@@ -575,6 +575,13 @@ footer p {
   z-index: 100;
   margin: inherit;
 }
+/* Obviate webcouturier.dropdownmenu */
 div#btnav * .submenu {
   display: none;
 }
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+  height: 1200px;
+  width: 100%;
+}
+/* finis */
